# stash

./: AGENTS.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  3cdeba46dbda_add_module_config_hash.py
stash/: adopt.py  cleanup.py  config.py  daemon.py  database.py  db.py  dbus_client.py  dbus_service.py  deployment.py  formats.py  history.py  hooks.py  interactive_rollback.py  live.py  main.py  models.py  render.py  repositories.py  rollback.py  status.py  systemd.py  templates.py
test/: test_adopt.py  test_clean.py  test_daemon.py  test_dbus_client.py  test_dbus_service.py  test_formats.py  test_history.py  test_hooks.py  test_live_incremental.py  test_main.py  test_migrations.py  test_models.py  test_render.py  test_render_hashing.py  test_rollback.py  test_status.py  test_systemd.py  test_themes.py
test/assets/dotfiles/test_config/: test_file.ini  test_file.json
test/assets/formats/: invalid.json  invalid.yaml  valid.yaml
